# PlateShapez

./: CLAUDE.md  README.md  pyproject.toml
src/plateshapez/: __main__.py  config.py
src/plateshapez/optim/: __init__.py  base.py  es_optimizer.py  oracle.py  pattern.py  runner.py  surrogate_optimizer.py
src/plateshapez/perturbations/: __init__.py  learned.py
tests/: test_config.py  test_es_optimizer.py  test_integration.py  test_learned_perturbation.py  test_optim_base.py  test_optimize_cli.py  test_oracle.py  test_pattern.py  test_surrogate_optimizer.py
