[project]
name = "plateshapez"
version = "0.1.0"
description = "Dataset generator for adversarial plate overlay"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyyaml>=6.0",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "types-pyyaml>=6.0.12.20250822",
]

[project.optional-dependencies]
# Pulls in the multi-engine ALPR harness used as the `advplate optimize`
# oracle. Core alprg deps are just numpy+pillow (no GPU required) -- the
# FakeEngine is enough to run the optimizer end to end without real ALPR.
optimize = ["alprg"]
# Same, plus a real (GPU) ALPR engine for actually-meaningful optimization runs.
optimize-gpu = ["alprg[fast-alpr]"]
# PyTorch differentiable-surrogate optimizer (Phase B). Heavy dependency kept
# optional and imported lazily, exactly like `alprg` -- core/CLI paths and the
# `es` optimizer work with zero torch installed.
surrogate = ["torch"]

[tool.uv]
package = true

[tool.uv.sources]
# Sibling repo in this sandbox; swap for a git dependency for CI/publish.
alprg = { path = "../ALPRovingGround", editable = true }

[project.scripts]
# Run with: uv run dev <command>
dev = "plateshapez.dev:main"
# CLI entry point as specified in project spec
advplate = "plateshapez.__main__:main"

[dependency-groups]
# Install with: uv sync --group dev
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-pillow>=10.2.0.20240822",
  "pytest>=8.4.1",
]

[tool.pytest.ini_options]
markers = [
  "requires_optimize: requires the optional alprg dependency (uv sync --extra optimize)",
  "requires_surrogate: requires the optional torch dependency (uv sync --extra surrogate)",
]

[tool.ruff]
# Match project Python version
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (imports)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# alprg is an optional dependency (uv sync --extra optimize); CI's default
# `uv sync --group dev` does not install it.
module = ["alprg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# torch is an optional dependency (uv sync --extra surrogate); CI's default
# `uv sync --group dev` does not install it, so let mypy pass without it.
module = ["torch.*"]
ignore_missing_imports = true
